--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,12 +15,13 @@ collections:
 
   - name: "posts"
     label: "Post"
-    folder: "src/pages/post"
+    folder: "src/posts"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
     sortableFields: ["commit_date", "title", "commit_author"]
+    format: "json"
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string", required: true}
