--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,8 +28,6 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Summary", name: "summary", widget: "string" }
       - label: "Type"
         name: "type"
         default: "text"
@@ -40,11 +38,20 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Source", name: "source", widget: "string", required: true }
+      - { label: "Public", name: "public", widget: "boolean", default: false }
+      - {
+          label: "URL (should be required if Image or Link)",
+          name: "url",
+          widget: "string",
+        }
 
   - name: "texts"
     label: "Texts"
     folder: "src/posts"
-    create: true
+    create: false
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
@@ -58,8 +65,6 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Summary", name: "summary", widget: "string" }
       - label: "Type"
         name: "type"
         default: "text"
@@ -70,11 +75,25 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - {
+          label: "Summary",
+          name: "summary",
+          widget: "string",
+          comment: "Depending on the type of post, this can be a link, or just text",
+        }
+      - { label: "Source", name: "source", widget: "string", required: true }
+      - { label: "Public", name: "public", widget: "boolean", default: false }
+      - {
+          label: "URL (should be required if Image or Link)",
+          name: "url",
+          widget: "string",
+        }
 
   - name: "articles"
     label: "Articles"
     folder: "src/posts"
-    create: true
+    create: false
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
@@ -88,11 +107,9 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Summary", name: "summary", widget: "string" }
       - label: "Type"
         name: "type"
-        default: "text"
+        default: "article"
         widget: "select"
         required: true
         options:
@@ -100,11 +117,20 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Source", name: "source", widget: "string", required: true }
+      - { label: "Public", name: "public", widget: "boolean", default: false }
+      - {
+          label: "URL (should be required if Image or Link)",
+          name: "url",
+          widget: "string",
+        }
 
   - name: "tweets"
     label: "Tweets"
     folder: "src/posts"
-    create: true
+    create: false
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
@@ -118,11 +144,9 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Summary", name: "summary", widget: "string" }
       - label: "Type"
         name: "type"
-        default: "text"
+        default: "tweet"
         widget: "select"
         required: true
         options:
@@ -130,11 +154,20 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Source", name: "source", widget: "string", required: true }
+      - { label: "Public", name: "public", widget: "boolean", default: false }
+      - {
+          label: "URL (should be required if Image or Link)",
+          name: "url",
+          widget: "string",
+        }
 
   - name: "images"
     label: "Images"
     folder: "src/posts"
-    create: true
+    create: false
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: false
@@ -148,11 +181,9 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
-      - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Summary", name: "summary", widget: "string" }
       - label: "Type"
         name: "type"
-        default: "text"
+        default: "image"
         widget: "select"
         required: true
         options:
@@ -160,3 +191,12 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Source", name: "source", widget: "string", required: true }
+      - { label: "Public", name: "public", widget: "boolean", default: false }
+      - {
+          label: "URL (should be required if Image or Link)",
+          name: "url",
+          widget: "string",
+        }
