--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -46,6 +46,7 @@ collections:
           label: "URL (should be required if Image or Link)",
           name: "url",
           widget: "string",
+          required: false,
         }
 
   - name: "texts"
@@ -88,6 +89,7 @@ collections:
           label: "URL (should be required if Image or Link)",
           name: "url",
           widget: "string",
+          required: false,
         }
 
   - name: "articles"
@@ -125,6 +127,7 @@ collections:
           label: "URL (should be required if Image or Link)",
           name: "url",
           widget: "string",
+          required: true,
         }
 
   - name: "tweets"
@@ -162,6 +165,7 @@ collections:
           label: "URL (should be required if Image or Link)",
           name: "url",
           widget: "string",
+          required: true,
         }
 
   - name: "images"
@@ -199,4 +203,5 @@ collections:
           label: "URL (should be required if Image or Link)",
           name: "url",
           widget: "string",
+          required: true,
         }
