--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -48,7 +48,14 @@ collections:
           widget: "string",
           required: false,
         }
-      - { label: "Publish Date", name: "date", widget: "", required: true }
+      - {
+          label: "Publish Date",
+          name: "datetime",
+          widget: "",
+          required: true,
+          dateFormat: true,
+          timeFormat: true,
+        }
       # - {
       #     label: "Body",
       #     name: "body",
