--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -109,6 +109,7 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+          - { label: "Prompt", value: "prompt" }
       - { label: "Title", name: "title", widget: "string", required: true }
       - {
           label: "Summary",
