--- a/src/posts/anxiety-podcast-how-to-fail.json
+++ b/src/posts/anxiety-podcast-how-to-fail.json
@@ -5,5 +5,6 @@
   "summary": "You will get through this time tough as a stronger and more resilient individual. Work to accept negative thoughts, practise gratitude, and what you can actively do to improve your situation. Figure it out for yourself, and then help others! 🙌",
   "source": "Here's a great podcast episode from Elizabeth from 'How To Fail' that touches upon this topic. Give it a listen and let us know what you learn! 👂",
   "url": "https://howtofail.podbean.com/e/how-to-fail-m-gawdat-c19/",
-  "public": true
+  "public": true,
+  "publishDate": "2020-04-18 19:27"
 }
