--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,8 @@ backend:
     uploadMedia: "[skip ci] Upload “{{path}}”"
     deleteMedia: "[skip ci] Delete “{{path}}”"
 
+  site_url: "https://www.covibes.app/"
+
 media_folder: static/img
 public_folder: /img
 
@@ -48,6 +50,37 @@ collections:
           widget: "string",
           required: false,
         }
+      - {
+          label: "Publish Date",
+          name: "publishDate",
+          widget: "datetime",
+          required: true,
+          dateFormat: "YYYY-MM-DD",
+          timeFormat: "HH:mm",
+          format: "YYYY-MM-DD HH:mm",
+        }
+      # - {
+      #     label: "Body",
+      #     name: "body",
+      #     widget: "markdown",
+      #     buttons:
+      #       [
+      #         "bold",
+      #         "italic",
+      #         "code",
+      #         "link",
+      #         "heading-one",
+      #         "heading-two",
+      #         "heading-three",
+      #         "heading-four",
+      #         "heading-five",
+      #         "heading-six",
+      #         "quote",
+      #         "bulleted-list",
+      #         "numbered-list",
+      #       ],
+      #     editorComponents: ["image"],
+      #   }
 
   - name: "texts"
     label: "Texts"
@@ -76,6 +109,7 @@ collections:
           - { label: "Online article", value: "article" }
           - { label: "Tweet", value: "tweet" }
           - { label: "Image", value: "image" }
+          - { label: "Prompt", value: "prompt" }
       - { label: "Title", name: "title", widget: "string", required: true }
       - {
           label: "Summary",
